@@ -1,4 +1,4 @@
 DIST DBDesigner4.0.5.4.tar.gz 9339411 RMD160 57ae660085ca1e085183f41485ca67bed1c48873 SHA1 3692bbd059f5e2b3c74e9746c0a82f90b4349009 SHA256 10a0e541de6447954080649502ee5d08720aad5f835ac8983af76131f375c659
-EBUILD dbdesigner-4.0.5.4.ebuild 1611 RMD160 cfbfeb3a39f858f868a8604e463037bd30d2e17d SHA1 cc9da12cc71ce05b327120e4886c8a828055a7ff SHA256 1a596d17b3e2b43ba3ce67957f4d28f1ff8131c8dd15887c041b9c4b40a3811a
-MISC ChangeLog 534 RMD160 94c482e8ba3c1e2bfeca4468fd3e2fef731846aa SHA1 f69bca9d3729e3f36fe5076120bbff433d13999a SHA256 8031bc4365d7c7baa06421a5a4c9fea893b04c8b0ff131abea70fce938563db6
+EBUILD dbdesigner-4.0.5.4-r1.ebuild 1636 RMD160 3960c4c0e9baf5f227fbedbce74ea3435a001d40 SHA1 04ffc4b7bac599c11dc539e9e88c21dcc3fed5bd SHA256 5d7ce47e3bd57d8577fee85eeb2ca0ec4ba1dda9b7df3b2177363aa38f0dc6ab
+MISC ChangeLog 677 RMD160 61d9168bfc9bed39a13732c4b7df147e22285ca5 SHA1 4508a9b936781c5ec28bc0533f09cdf685dce7ad SHA256 21e15ae209ecbcdc25aa4e78180f40af44972645fe2630192e017456a97145a1
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
