@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/dbdesigner
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  05 May 2009; Markos Chandras <hwoarang@gentoo.org>
+  -dbdesigner-4.0.5.4.ebuild, +dbdesigner-4.0.5.4-r1.ebuild:
+  Fixed ebuild. Bug #217254
 
   07 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   +dbdesigner-4.0.5.4.ebuild, -dbdesigner-4.0.5.4-r4.ebuild:
